[project]
name = "register3d"
version = "0.0.0"
description = "An efficient binary value 3d volume registration algorithm based on Cupy."
authors = [
    {name = "GGN_2015",email = "neko@jlulug.org"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "<3.13, >=3.10"
dependencies = [
    "rotate_volume", "cupy_fft_match", "cupy", "tqdm"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
